<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TonUINO NFC Tools</string>
    <string name="app_version">(v%s)</string>

    <!-- Strings on MainActivity -->
    <string name="main_intro_line1">This app can read and write NFC-compatible RFID Tags for the TonUINO DIY music
        box.
    </string>
    <string name="main_intro_line2">More information about the TonUINO project is available at https://www.tonuino.de (mostly German).
    </string>
    <string name="main_nfcadapter_error">Error</string>
    <string name="main_nfcadapter_is_null">This device does not support NFC. The functionality is not available.
    </string>
    <string name="main_nfcadapter_disabled">"NFC is available, but currently deactivated.\nPlease enable NFC in the device settings."
    </string>
    <string name="main_nfcadapter_settings">Open settings</string>
    <string name="main_read_tag_headline">Read tags</string>
    <string name="main_read_tag_description">If this device is placed on a supported NFC-compatible RFID tag, which
        contains TonUINO data, the data will be read and displayed.
    </string>
    <string name="main_write_tag_headline">Write tags</string>
    <string name="main_write_tag_description">Existing data on the tag will be overwritten.</string>
    <string name="main_write_tag_button">Write data on tag</string>
    <string name="main_write_bulk_button">Enter bulk write list</string>


    <!-- Strings used on EditActivity -->
    <string name="edit_nfc_connection_lost">Connection lost</string>
    <string name="edit_tonuino_version_label">Select tag type</string>
    <string-array name="edit_tonuino_tag_types">
        <item>Tonuino 2.0.x</item>
        <item>Tonuino 2.1</item>
        <item>Tonuino 2.1 Modifier Tag</item>
    </string-array>
    <string name="edit_tab_simple">Default</string>
    <string name="edit_tab_extended">Extended</string>
    <string name="edit_tab_bytes">Bytes</string>
    <string name="edit_cookie_label">Cookie</string>
    <string name="edit_version_label">Version</string>
    <string name="edit_folder_label">Folder</string>
    <string name="edit_mode_label">Mode</string>
    <string name="edit_special_label">Extra</string>
    <string name="edit_special_label_for_album_mode">Title</string>
    <string name="edit_special_label_for_modifier_sleep_timer">Minutes</string>
    <string name="edit_special_label_from">From</string>
    <string name="edit_special2_label">Extra 2</string>
    <string name="edit_special2_label_to">To</string>
    <string name="edit_version_1">Format 1: For Tonuino 2.0.x</string>
    <string name="edit_version_2">Format 2: For Tonuino 2.1 and Tonuino TNG 3.1</string>

    <string name="edit_hidden_label">hidden</string>
    <string name="edit_unknown_value">Value \'%s\' is unknown.</string>
    <string name="edit_limit_numeric_value" tools:ignore="PluralsCandidate">Please enter a number between %d and %d.</string>

    <string-array name="edit_version">
        <item>Tonuino 2.0.x</item>
        <item>Tonuino 2.1.x and Tonuino TNG</item>
    </string-array>

    <string-array name="edit_mode">
        <item>Audio book (single file)</item>
        <item>Album</item>
        <item>Party</item>
        <item>Single</item>
        <item>Audio book (multiple files)</item>
        <item>Admin</item>
        <item>Audio book from-to (single file)</item>
        <item>Album from-to</item>
        <item>Party from-to</item>
        <item>Audio book series (single files)</item>
        <item>Repeat last</item>
        <item>Quiz Game</item>
        <item>Memory Game</item>
        <item>Bluetooth</item>
    </string-array>
    <string-array name="edit_mode_description">
        <item>A random file from the chosen folder will be played.</item>
        <item>Plays all files inside the folder in numerical order.</item>
        <item>Plays random files inside the folder.</item>
        <item>Plays only the chosen file from the selected folder.</item>
        <item>Plays all files inside the folder in numerical order and keeps track of the last started file. This way
            the tag will play where it left off the last time.
        </item>
        <item>Tonuino 2.0.1 does not yet support admin tags.</item>
        <item>A random file from the chosen folder between the selected minimum and maximum will be played.</item>
        <item>Plays all files inside the folder between the selected minimum and maximum in numerical order.</item>
        <item>Plays random files inside the folder between the selected minimum and maximum.</item>
        <item>Plays the next file from the folder and store the progress.</item>
        <item>Repeat the last card or shortcut.</item>
        <item>Play a quiz game either with answers or with a buzzer.</item>
        <item>Play a memory game.</item>
        <item>Toggles bluetooth mode on or off.</item>
    </string-array>
    <string name="edit_mode_unknown">Mode \'%d\' is unknown.</string>

    <string-array name="edit_modifier_tags">
        <item>Admin menu</item>
        <item>Sleep timer</item>
        <item>Freeze dance</item>
        <item>Locked</item>
        <item>Toddler mode</item>
        <item>Kindergarten mode</item>
        <item>Repeat single tag</item>
        <item>Bluetooth</item>
    </string-array>
    <string-array name="edit_modifier_tags_description">
        <item>Opens the TonUINO admin menu</item>
        <item>Pauses playback after timer</item>
        <item>Randomly pauses the track after 5 to 30 seconds</item>
        <item>All buttons are locked and no new card will be read</item>
        <item>All buttons are locked</item>
        <item>Previous and back buttons are locked. Adding a new card will not stop the current track but will schedule it as next track</item>
        <item>Repeat current track</item>
        <item>Bluetooth modifier</item>
    </string-array>

    <string name="edit_special_from">Between track %d</string>
    <string name="edit_special_label_for_sleep_timer">Minutes</string>
    <string name="edit_special2_to">And track %d</string>

    <string name="edit_write_button">Write data on tag %s</string>
    <string name="edit_write_button_no_tag">Cannot write data without a tag</string>
    <string name="edit_write_description">To increase the chances that the data will be successfully written, place the
        device directly on top of the tag and then press the button to write.
    </string>
    <string name="edit_unsupported_value">%s (Nicht unterstützt)</string>

    <!-- Strings on the EditSimple fragment -->
    <string name="edit_simple_intro">This view allows to select values for the NFC tag.</string>
    <string name="edit_folder_normal_tag">Regular tag</string>
    <string name="edit_folder_modifier_tag">Modifier tag</string>

    <!-- Strings on the EditExtended fragment -->
    <string name="edit_extended_intro">This extended view can be used to enter values for TonUINO variants that this
        app does not know about.
    </string>
    <string name="edit_ext_folder_description">Uses the folder /%02d.</string>
    <string name="ext_folder_description_modifier">This is a modifier tag.</string>
    <string name="edit_ext_folder_not_allowed_description">DFPlayer can only access folders up to 99</string>

    <!-- Strings on EditHex fragment -->
    <string name="edit_hex_intro">This view can be used to enter arbitrary data.</string>
    <string name="edit_hex_disclaimer">The first four byte are used by TonUINO to recognize a usable tag. This cookie
        must also be the same in the TonUINO source code. Otherwise the tag will not work.
    </string>
    <string name="edit_hex_bytes_label">Bytes (hexadecimal)</string>
    <string name="edit_hex_whitespace">Whitespace will be ignored.</string>
    <string name="edit_hex_zeropad">This app will always write full sectors (size depends on tag). The rest of the
        sector will be filled with \'0x0\'.
    </string>

    <!-- Strings on write result modal dialog -->
    <string name="written_title_failure">Error</string>
    <string name="written_success">Success: Wrote to tag.</string>
    <string name="written_unsupported_tag_type">This app/device cannot write on this kind of NFC tag</string>
    <string name="written_authentication_failure">Authenticating at the NFC Tag failed.</string>
    <string name="written_tag_unavailable">No NFC tag available.</string>
    <string name="written_unknown_error">An unknown error has occurred</string>
    <string name="written_button_retry">Try again</string>

    <!-- Strings about tag identification -->
    <string name="identify_unknown_type">unknown</string>
    <string name="identify_unsupported_type">unsupported</string>

    <!-- Strings on ReadActivity -->
    <string name="read_title">Tag %s</string>
    <string name="read_intro">Read data</string>
    <string name="read_edit_button">Edit</string>

    <!-- BulkEditActivity and its fragments -->
    <string name="bulk_activity_title">Bulk write tags</string>

    <string name="bulk_edit_label">Edit List</string>
    <string name="bulk_edit_description">You can add multiple TonUINO tags in bulk here. Write one tag per line following this format: Bytes to write, followed by \';\', and then you can add an optional description.\nFor example:\n1337B3470101040500;First tag</string>
    <string name="bulk_edit_button_start_writing">Start bulk write</string>
    <string name="bulk_edit_button_scan_qrcode">Scan QRCode</string>

    <string name="bulk_write_label">Write Tags</string>
    <string name="bulk_write_line_number">Line %d of %d</string>
    <string name="bulk_write_title_caption">Title</string>
    <string name="bulk_write_content_caption">Content</string>
    <string name="bulk_write_button_write">Write data</string>
    <string name="bulk_write_button_prev">Previous line</string>
    <string name="bulk_write_button_next">Next line</string>
    <string name="bulk_write_button_back">Change list</string>
    <string name="bulk_write_invalid_line_format">Invalid line format</string>

    <!-- Other strings -->
    <string name="button_ok">OK</string>
    <string name="play_mp3_file">Will play file %03d.mp3</string>
    <string name="play_timer" tools:ignore="PluralsCandidate">Will pause playing after %d minutes</string>
    <string name="nfc_tag_found">Tag %s gefunden</string>
    <string name="nfc_read_tag_failure">Error: Could not read data from NFC tag</string>
    <string name="nfc_tag_technologies">"Device and tag support these technologies:\n%s"</string>
    <string name="nfc_tag_type">Tag technology: \n%s</string>
    <string name="nfca_not_ok">NfcA transceive returned \'%s\' instead of OK (\'A\')</string>

    <!-- New fields below -->
    <string name="apply_change">Apply change</string>
</resources>
