<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:context=".ui.edit.EditExtended" android:orientation="vertical">

    <TextView
            android:text="@string/edit_extended_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView"/>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:minHeight="48dp">
            <TextView
                    android:labelFor="@+id/folder"
                    android:text="@string/edit_folder_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"/>
            <EditText
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/folder"
                    android:inputType="number"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:minHeight="0dp">
            <TextView
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:id="@+id/folder_description"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:minHeight="48dp">
            <TextView
                    android:labelFor="@+id/mode"
                    android:text="@string/edit_mode_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/mode"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:minHeight="0dp">
            <TextView
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:id="@+id/mode_description"/>
        </TableRow>
        <TableRow android:id="@+id/special_row"
                  android:layout_width="match_parent" android:layout_height="match_parent" android:minHeight="48dp">
            <TextView
                    android:labelFor="@+id/special"
                    android:text="@string/edit_special_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/special_label"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/special"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:minHeight="0dp">
            <TextView
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:id="@+id/special_description"/>
        </TableRow>
        <TableRow android:id="@+id/special2_row"
                  android:layout_width="match_parent" android:layout_height="match_parent" android:minHeight="48dp">
            <TextView
                    android:labelFor="@+id/special2"
                    android:text="@string/edit_special2_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_ext_special2_label"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/special2"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:minHeight="0dp">
            <TextView
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:id="@+id/special2_description"/>
        </TableRow>
    </TableLayout>
</LinearLayout>